--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "declaration": true,
     "moduleResolution": "node"
   },
-  "include": ["lib/**/*"],
+  "include": ["lib/**/*", "lib/index.d.ts"],
   "exclude": ["node_modules"]
 }
